Fix code spacing issues

--- a/css/graph_layout.css
+++ b/css/graph_layout.css
@@ -1,5 +1,4 @@
-/* D3 */
-
+/* D3 styling */
 
 .links line {
     stroke: #999;
@@ -16,6 +15,7 @@
     padding: 0.5em;
     margin: 0;
 }
+
 div.tooltip {   
     position: absolute;         
     text-align: center;         
@@ -27,8 +27,3 @@ div.tooltip {
     border-radius: 8px;         
     pointer-events: none;           
 }
-
-.template{
-    display: none;
-}
-
