--- a/css/graphflow_ui.css
+++ b/css/graphflow_ui.css
@@ -52,3 +52,7 @@ pre{
     word-wrap: normal;
     white-space: pre;
 }
+
+.template{
+    display: none;
+}
